@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Wed Mar 29 15:20:19 2006
+# Generated on Wed Mar 29 15:29:19 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -363,8 +363,9 @@ class Gpodder(SimpleGladeApp):
         url_old = self.channels[active].url
         title_old = self.channels[active].title
         desc_old = self.channels[active].description
+        downloaddir_old = self.channels[active].save_dir # FIXME: should be download dir, but save_dir is more descriptive for now
         
-        result = Gpodderchannel().requestURL( preset = url_old, title = title_old, description = desc_old)
+        result = Gpodderchannel().requestURL( preset = url_old, title = title_old, description = desc_old, downloaddir = downloaddir_old)
         if result != None and result != "" and (result[:4] == "http" or result[:3] == "ftp"):
             if libgpodder.isDebugging():
                 print "will EDIT ID " + str(active) + " FROM " + url_old + " TO " + result
@@ -665,9 +666,12 @@ class Gpodderchannel(SimpleGladeApp):
 
     #-- Gpodderchannel custom methods {
     #   Write your own methods here
-    def requestURL( self, preset = None, title = "(unknown)", description = "(unknown)"):
+    def requestURL( self, preset = None, title = "(unknown)", description = "(unknown)", downloaddir = None):
         if preset != None:
             self.entryURL.set_text( preset)
+
+        if downloaddir != None:
+            self.downloadTo.set_text( downloaddir)
 
         self.channel_title.set_markup( "<b>%s</b>" % title)
         b = gtk.TextBuffer()
