@@ -1,6 +1,7 @@
 Wed, 29 Mar 2006 15:21:32 +0200 <thp@perli.net>
 	* Re-designed gPodder properties dialog
 	+ Added option to create a symlink on users' desktop to downloaddir
+	* Added "Download to" field to gPodder channel editor
 
 Wed, 29 Mar 2006 13:29:51 +0200 <thp@perli.net>
 	* Only create one localDB object in the main gPodder window
